--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,16 @@ dependencies {
     testRuntimeOnly "org.seleniumhq.selenium:selenium-chrome-driver:4.19.1"
     testRuntimeOnly "org.seleniumhq.selenium:selenium-firefox-driver:4.19.1"
     testRuntimeOnly "org.seleniumhq.selenium:selenium-safari-driver:4.19.1"
+
+    implementation 'mysql:mysql-connector-java:8.0.33'
+    // Bootstrap and jQuery for UI (optional, falls nicht über CDN)
+    // implementation 'org.webjars:bootstrap:5.1.3'
+    // implementation 'org.webjars:jquery:3.6.0'
+    // Additional test dependencies
+    testImplementation 'org.grails:grails-gorm-testing-support'
+    testImplementation 'org.grails:grails-web-testing-support'
+    // Runtime dependencies
+    runtimeOnly 'com.h2database:h2' // Für Development und Tests
 }
 
 application {
@@ -87,13 +97,6 @@ java {
     sourceCompatibility = JavaVersion.toVersion("11")
 }
 
-tasks.withType(Test) {
-    useJUnitPlatform()
-    systemProperty "geb.env", System.getProperty('geb.env')
-    systemProperty "geb.build.reportsDir", reporting.file("geb/integrationTest")
-    systemProperty 'webdriver.chrome.driver', "${System.getenv('CHROMEWEBDRIVER')}/chromedriver"
-    systemProperty 'webdriver.gecko.driver', "${System.getenv('GECKOWEBDRIVER')}/geckodriver"
-}
 webdriverBinaries {
     chromedriver '122.0.6260.0'
     geckodriver '0.33.0'
