--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -1,9 +1,77 @@
+---
+grails:
+  profile: web
+  codegen:
+    defaultPackage: mab
+  gorm:
+    reactor:
+      events: false
+  databinding:
+    dateFormats:
+      - 'yyyy-MM-dd HH:mm:ss.S'
+      - 'yyyy-MM-dd'
+      - 'dd.MM.yyyy'
+
 info:
   app:
     name: '@info.app.name@'
     version: '@info.app.version@'
     grailsVersion: '@info.app.grailsVersion@'
+
+spring:
+  jmx:
+    unique-names: true
+  main:
+    banner-mode: "off"
+  groovy:
+    template:
+      check-template-location: false
+
+management:
+  endpoints:
+    enabled-by-default: false
+
+---
 grails:
+  mime:
+    disable:
+      accept:
+        header:
+          userAgents:
+            - Gecko
+            - WebKit
+            - Presto
+            - Trident
+    types:
+      all: '*/*'
+      atom: application/atom+xml
+      css: text/css
+      csv: text/csv
+      form: application/x-www-form-urlencoded
+      html:
+        - text/html
+        - application/xhtml+xml
+      js: text/javascript
+      json:
+        - application/json
+        - text/json
+      multipartForm: multipart/form-data
+      pdf: application/pdf
+      rss: application/rss+xml
+      text: text/plain
+      hal:
+        - application/hal+json
+        - application/hal+xml
+      xml:
+        - text/xml
+        - application/xml
+  urlmapping:
+    cache:
+      maxsize: 1000
+  controllers:
+    defaultScope: singleton
+  converters:
+    encoding: UTF-8
   views:
     default:
       codec: html
@@ -12,63 +80,55 @@ grails:
       htmlcodec: xml
       codecs:
         expression: html
-        scriptlet: html
+        scriptlets: html
         taglib: none
         staticparts: none
-  mime:
-    disable:
-      accept:
-        header:
-          userAgents:
-          - Gecko
-          - WebKit
-          - Presto
-          - Trident
-    types:
-      all: '*/*'
-      atom: application/atom+xml
-      css: text/css
-      csv: text/csv
-      form: application/x-www-form-urlencoded
-      html:
-      - text/html
-      - application/xhtml+xml
-      js: text/javascript
-      json:
-      - application/json
-      - text/json
-      multipartForm: multipart/form-data
-      pdf: application/pdf
-      rss: application/rss+xml
-      text: text/plain
-      hal:
-      - application/hal+json
-      - application/hal+xml
-      xml:
-      - text/xml
-      - application/xml
-  codegen:
-    defaultPackage: mab
-  profile: web
+---
+hibernate:
+  cache:
+    queries: false
+    use_second_level_cache: false
+    use_query_cache: false
+  format_sql: true
+  show_sql: true
+  hbm2ddl:
+    auto: create-drop
+
+---
 dataSource:
+  pooled: true
+  jmxExport: true
   driverClassName: org.h2.Driver
   username: sa
   password: ''
-  pooled: true
-  jmxExport: true
+
 environments:
   development:
     dataSource:
       dbCreate: create-drop
       url: jdbc:h2:mem:devDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+      logSql: true
+      formatSql: true
+    hibernate:
+      show_sql: true
+      format_sql: true
+      hbm2ddl:
+        auto: create-drop
   test:
     dataSource:
       dbCreate: update
       url: jdbc:h2:mem:testDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+    hibernate:
+      hbm2ddl:
+        auto: update
   production:
     dataSource:
-      dbCreate: none
-      url: jdbc:h2:./prodDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+      dbCreate: update
+      url: jdbc:mysql://localhost:3306/mab_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+      driverClassName: com.mysql.cj.jdbc.Driver
+      dialect: org.hibernate.dialect.MySQL8Dialect
+      username: mab_user
+      password: mab_password
       properties:
         jmxEnabled: true
         initialSize: 5
@@ -86,9 +146,8 @@ environments:
         testWhileIdle: true
         testOnReturn: false
         jdbcInterceptors: ConnectionState
-        defaultTransactionIsolation: 2
-hibernate:
-  cache:
-    queries: false
-    use_second_level_cache: false
-    use_query_cache: false
+    hibernate:
+      show_sql: false
+      format_sql: false
+      hbm2ddl:
+        auto: update
